[package]
name = "lance-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Lance indices implementation"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
arrow.workspace = true
arrow-array.workspace = true
arrow-ord.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
async-recursion.workspace = true
async-trait.workspace = true
bitvec.workspace = true
datafusion-common.workspace = true
datafusion-expr.workspace = true
datafusion-physical-expr.workspace = true
datafusion-sql.workspace = true
datafusion.workspace = true
deepsize.workspace = true
futures.workspace = true
half.workspace = true
itertools.workspace = true
lance-arrow.workspace = true
lance-core.workspace = true
lance-datafusion.workspace = true
lance-encoding.workspace = true
lance-file.workspace = true
lance-io.workspace = true
lance-linalg.workspace = true
lance-table.workspace = true
lazy_static.workspace = true
log.workspace = true
num_cpus.workspace = true
num-traits.workspace = true
object_store.workspace = true
prost.workspace = true
rand.workspace = true
roaring.workspace = true
rayon.workspace = true
serde_json.workspace = true
serde.workspace = true
snafu.workspace = true
tantivy.workspace = true
tokio.workspace = true
tracing.workspace = true
tempfile.workspace = true
crossbeam-queue.workspace = true

[dev-dependencies]
approx.workspace = true
clap = { workspace = true, features = ["derive"] }
criterion.workspace = true
lance-datagen.workspace = true
lance-testing.workspace = true
tempfile.workspace = true
datafusion-sql.workspace = true
random_word = { version = "0.4.3", features = ["en"] }

[build-dependencies]
prost-build.workspace = true
rustc_version.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
pprof.workspace = true

[[bench]]
name = "find_partitions"
harness = false

[[bench]]
name = "pq_dist_table"
harness = false

[[bench]]
name = "pq_assignment"
harness = false

[[bench]]
name = "hnsw"
harness = false

[[bench]]
name = "sq"
harness = false

[[bench]]
name = "inverted"
harness = false
