[package]
name = "lance-namespace-impls"
description = "Lance Namespace Implementations"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = ["aws", "azure", "gcp"]
rest = ["dep:reqwest", "dep:serde_json", "dep:url"]
# Cloud storage features - align with lance-io
gcp = ["lance-io/gcp"]
aws = ["lance-io/aws"]
azure = ["lance-io/azure"]
oss = ["lance-io/oss"]

[dependencies]
lance-namespace.workspace = true
lance-core.workspace = true

# REST implementation dependencies (optional, enabled by "rest" feature)
reqwest = { version = "0.12", optional = true, default-features = false, features = [
    "json",
    "charset",
    "gzip",
    "http2",
    "stream",
    "rustls-tls-native-roots"
] }
serde_json = { workspace = true, optional = true }
url = { workspace = true, optional = true }

# Directory implementation dependencies (always enabled)
lance = { workspace = true }
lance-io = { workspace = true }
object_store = { workspace = true }
arrow = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }

# Common dependencies
async-trait.workspace = true
bytes.workspace = true
snafu.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile.workspace = true
wiremock.workspace = true

[lints]
workspace = true
