[package]
name = "lance-namespace"
description = "Lance Namespace Core APIs"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "charset",
    "gzip",
    "http2",
    "stream",
    "rustls-tls-native-roots"
] }
serde_json.workspace = true
url.workspace = true
arrow.workspace = true
lance-core.workspace = true
snafu.workspace = true

# Use models from the reqwest client
lance-namespace-reqwest-client = "0.0.16"

[dev-dependencies]
tokio.workspace = true
wiremock = "0.6"
tempfile.workspace = true

[lints]
workspace = true
